--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,24 @@
-.App {
+.popup {
+  max-width: 440px;
+  background: linear-gradient(
+    145deg,
+    rgba(202, 94, 229, 0.931),
+    rgba(95, 44, 247, 0.738)
+  );
+  border-radius: 20px;
+  border: 1px solid rgba(255, 255, 255, 0.05);
+  padding: 40px 0 55px 0;
   text-align: center;
+  transition-property: transform;
+  transition-duration: 0.5s;
+  margin: 40px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.popup h1 {
+  font-size: 18px;
+  font-weight: 400;
+  font-family: sans-serif;
+  color: #fff;
+  margin: 0 0 25px 0;
+  line-height: 1.5em;
 }
